# Bible_Companion

./: ATTRIBUTION.md  LICENSE  README.md  index.html  manifest.json  sw.js
bsb-data/: .gitignore  ATTRIBUTION.md  LICENSE-CC-BY.md  LICENSE-CC0.md  Makefile  README.md  pyproject.toml
bsb-data/.github/workflows/: build-publish.yml
bsb-data/output/base/greek-tsv/: 1CO.tsv  1JN.tsv  1PE.tsv  1TH.tsv  1TI.tsv  2CO.tsv  2JN.tsv  2PE.tsv  2TH.tsv  2TI.tsv  3JN.tsv  ACT.tsv  COL.tsv  EPH.tsv  GAL.tsv  HEB.tsv  JAS.tsv  JHN.tsv  JUD.tsv  LUK.tsv  MAT.tsv  MRK.tsv  PHM.tsv  PHP.tsv  REV.tsv  ROM.tsv  TIT.tsv  stats.json
bsb-data/output/base/hebrew-tsv/: 1CH.tsv  1KI.tsv  1SA.tsv  2CH.tsv  2KI.tsv  2SA.tsv  AMO.tsv  DAN.tsv  DEU.tsv  ECC.tsv  EST.tsv  EXO.tsv  EZK.tsv  EZR.tsv  GEN.tsv  HAB.tsv  HAG.tsv  HOS.tsv  ISA.tsv  JDG.tsv  JER.tsv  JOB.tsv  JOL.tsv  JON.tsv  JOS.tsv  LAM.tsv  LEV.tsv  MAL.tsv  (+12 more)
bsb-data/scripts/: __init__.py  build.py  build_concordance.py  build_display.py  build_english_concordance.py  build_geography.py  build_greek_tsv.py  build_headings.py  build_hebrew_tsv.py  build_helloao.py  build_index_cc_by.py  build_index_cc_by_split.py  build_index_pd.py  build_lang_tsv.py  build_lexicon.py  build_proper_names.py  build_text_only.py  build_versification.py  convert_usj.py  convert_xlsx_to_csv.py  demo_english_concordance.py  enrich_gloss.py  enrich_marble.py  enrich_morphology.py  enrich_parallel.py  enrich_topics.py  enrich_ubs.py  enrich_ubs_refs.py  enrich_xrefs.py  fetch-sources.sh  generate_metadata.py  schemas.py  types.py  utils.py  validate.py
(+1209 files in other folders)
